--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -7,7 +7,7 @@
 .container {
   position: relative;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   max-width: 1200px;
   margin: 0px auto 0px auto;
   padding: 20px;
