--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -21,5 +21,7 @@
 .items {
   display: flex;
   flex-wrap: wrap;
-  gap: 150px;
+  justify-content: center;
+  grid-column-gap: 150px;
+  row-gap: 40px;
 }
