--- a/src/components/Contact/Form/Form.module.css
+++ b/src/components/Contact/Form/Form.module.css
@@ -49,3 +49,10 @@
   cursor: pointer;
   box-shadow: 0px 0px 5px 2px #f6f200;
 }
+
+@media screen and (max-width: 1300px) {
+  .container {
+    width: 80%;
+    margin-right: auto;
+  }
+}
