--- a/src/components/Contact/Info/Info.module.css
+++ b/src/components/Contact/Info/Info.module.css
@@ -27,3 +27,9 @@
 .button a:hover {
   text-decoration: underline;
 }
+
+@media screen and (max-width: 1300px) {
+  .container {
+    width: auto;
+  }
+}
