--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,5 +1,6 @@
 .nav {
   position: fixed;
+  top: 0;
   background-color: rgba(33, 33, 33, 0.7);
   width: 100%;
   z-index: 100;
@@ -37,4 +38,10 @@
 
 .item:hover ::after {
   width: 100%;
+}
+
+@media screen and (max-width: 640px) {
+  .buttons {
+    display: none;
+  }
 }
