--- a/src/components/StartScreen/StartScreen.module.css
+++ b/src/components/StartScreen/StartScreen.module.css
@@ -51,3 +51,17 @@
 .info a {
   text-decoration: none;
 }
+
+@media screen and (max-width: 940px) {
+  .container {
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .container img {
+    width: 300px;
+    height: 300px;
+  }
+}
