--- a/src/components/StartScreen/StartScreen.module.css
+++ b/src/components/StartScreen/StartScreen.module.css
@@ -52,6 +52,10 @@
   text-decoration: none;
 }
 
+.description {
+  max-width: 500px;
+}
+
 @media screen and (max-width: 940px) {
   .container {
     flex-direction: column-reverse;
