--- a/src/components/NavBar/Flags/Flags.module.css
+++ b/src/components/NavBar/Flags/Flags.module.css
@@ -3,6 +3,11 @@
   gap: 10px;
 }
 
+.flag {
+  display: list-item;
+  color: transparent;
+}
+
 .flag:hover {
   cursor: pointer;
   box-shadow: 0px 0px 5px 2px #f6f200;
