--- a/src/components/NavBar/Sidebar/Sidebar.module.css
+++ b/src/components/NavBar/Sidebar/Sidebar.module.css
@@ -27,13 +27,19 @@
 }
 
 .openBar {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
   animation-name: openBar;
   animation-duration: 0.2s;
 }
 
 .closeBar {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
   animation-name: closeBar;
   animation-duration: 0.2s;
 }
