--- a/src/components/StartScreen/StartScreen.module.css
+++ b/src/components/StartScreen/StartScreen.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   max-width: 1200px;
   margin: 0 auto 0 auto;
-  height: 90vh;
+  min-height: 90vh;
   padding: 20px;
   color: white;
 }
