--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -26,8 +26,8 @@
 .border {
   position: absolute;
   z-index: 0;
-  border-top: 8px solid yellow;
-  border-left: 8px solid yellow;
+  border-top: 8px solid rgb(44, 195, 233);
+  border-left: 8px solid rgb(44, 195, 233);
   width: 420px;
   height: 500px;
 }
@@ -50,7 +50,7 @@
 
 .button {
   margin-top: auto;
-  background-color: yellow;
+  background-color: rgb(44, 195, 233);
   color: black;
   text-align: center;
   font-weight: bold;
@@ -61,7 +61,7 @@
 
 .button:hover {
   cursor: pointer;
-  box-shadow: 0px 0px 5px 2px #f6f200;
+  box-shadow: 0px 0px 5px 2px rgb(44, 195, 233);;
 }
 
 @media screen and (max-width: 1020px) {
