--- a/src/components/Contact/Form/Form.module.css
+++ b/src/components/Contact/Form/Form.module.css
@@ -29,13 +29,13 @@
 
 .container input:focus,
 .container textarea:focus {
-  outline: 1px solid yellow;
+  outline: 1px solid rgb(44, 195, 233);;
 }
 
 .container button {
   height: 3.8rem;
   width: 10.7rem;
-  background: yellow;
+  background: rgb(44, 195, 233);
   border-radius: 1rem;
   font-weight: 400;
   font-size: 1.6rem;
@@ -47,7 +47,7 @@
 
 .container button:hover {
   cursor: pointer;
-  box-shadow: 0px 0px 5px 2px #f6f200;
+  box-shadow: 0px 0px 5px 2pxrgb(44, 195, 233);
 }
 
 @media screen and (max-width: 1300px) {
