--- a/src/components/Contact/Info/Info.module.css
+++ b/src/components/Contact/Info/Info.module.css
@@ -15,7 +15,7 @@
   width: 30px;
   height: 30px;
   padding: 10px;
-  background-color: yellow;
+  background-color: rgb(44, 195, 233);
   border-radius: 50%;
 }
 
